project hover buttons

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
                 <div class="prog-lang">
                 <p>HTML</p><p>CSS</p>
               </div>
-              <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              <div class="button-container">
+                <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              </div>
             </div>
             <div class="project">
               <img src="./resources/images/thumbnail-project-2-small.webp" alt="">
@@ -108,7 +110,9 @@
                 <p>HTML</p>
                 <p>CSS</p>
               </div>
-              <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              <div class="button-container">
+                <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              </div>
             </div>
             <div class="project">
               <img src="./resources/images/thumbnail-project-3-small.webp" alt="">
@@ -118,7 +122,9 @@
                 <p>CSS</p>
                 <p>JAVASCRIPT</p>
               </div>
-              <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              <div class="button-container">
+                <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              </div>
             </div>
             <div class="project">
               <img src="./resources/images/thumbnail-project-4-small.webp" alt="">
@@ -128,7 +134,9 @@
                 <p>CSS</p>
                 <p>JAVASCRIPT</p>
               </div>
-              <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              <div class="button-container">
+                <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              </div>
             </div>
             <div class="project">
               <img src="./resources/images/thumbnail-project-5-small.webp" alt="">
@@ -138,7 +146,9 @@
                 <p>CSS</p>
                 <p>JAVASCRIPT</p>
               </div>
-              <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              <div class="button-container">
+                <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              </div>
             </div>
             <div class="project">
               <img src="./resources/images/thumbnail-project-6-small.webp" alt="">
@@ -148,7 +158,9 @@
                 <p>CSS</p>
                 <p>JAVASCRIPT</p>
               </div>
-              <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              <div class="button-container">
+                <button class="fs-button text-neutral-100 fw-bold">VIEW PROJECT</button><button class="fs-button text-neutral-100 fw-bold">VIEW CODE</button>
+              </div>
             </div>
           </div>
         </div>
