--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           </ul>
         </section>
       </header>
+      <div class="rings-deco top-rings">
+        <img src="./resources/images/pattern-rings.svg">
+      </div>
       <main>
         <div class="width-margin">
           <div class="presentation">
@@ -57,6 +60,9 @@
                 CONTACT ME
               </button>
             </div>
+          </div>
+          <div class="circle-deco">
+            <img src="./resources/images/pattern-circle.svg" alt="">
           </div>
           <hr>
           <div class="skills-container">
@@ -84,6 +90,9 @@
               <h2 class="fs-heading-l fw-bold text-neutral-100">Sass</h2>
               <p class="fs-body fw-regular text-neutral-200">3 years experience</p>
             </div>
+          </div>
+          <div class="rings-deco middle-rings">
+            <img src="./resources/images/pattern-rings.svg">
           </div>
           <hr class="mobile-line">
           <div class="projects-title">
@@ -190,6 +199,9 @@
           </form>
         </div>
       </div>
+      <div class="rings-deco bottom-rings">
+        <img src="./resources/images/pattern-rings.svg">
+      </div>
       <hr class="width-margin">
       <section class="logo-socials  width-margin">
         <h3 class="fs-nav fw-bold text-neutral-100">adamkeyes</h3>
@@ -217,6 +229,5 @@
         </ul>
       </section>
     </footer>
-    <!-- </div> -->
   </body>
 </html>
