background decoration corrections

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   </head>
   <body>
     <script type="module" src="./main.js"></script>
-    <!-- <div class="container"> -->
-      <header>
+      <header class="top-rings">
         <section class="logo-socials top-socials width-margin">
           <h3 class="fs-nav fw-bold text-neutral-100">adamkeyes</h3>
           <ul class="social-list" role="list" aria-label="Social links">
@@ -42,9 +41,6 @@
           </ul>
         </section>
       </header>
-      <div class="rings-deco top-rings">
-        <img src="./resources/images/pattern-rings.svg">
-      </div>
       <main>
         <div class="width-margin">
           <div class="presentation">
@@ -60,9 +56,6 @@
                 CONTACT ME
               </button>
             </div>
-          </div>
-          <div class="circle-deco">
-            <img src="./resources/images/pattern-circle.svg" alt="">
           </div>
           <hr>
           <div class="skills-container">
@@ -90,9 +83,6 @@
               <h2 class="fs-heading-l fw-bold text-neutral-100">Sass</h2>
               <p class="fs-body fw-regular text-neutral-200">3 years experience</p>
             </div>
-          </div>
-          <div class="rings-deco middle-rings">
-            <img src="./resources/images/pattern-rings.svg">
           </div>
           <hr class="mobile-line">
           <div class="projects-title">
@@ -198,9 +188,6 @@
             </div>
           </form>
         </div>
-      </div>
-      <div class="rings-deco bottom-rings">
-        <img src="./resources/images/pattern-rings.svg">
       </div>
       <hr class="width-margin">
       <section class="logo-socials  width-margin">
