desktop view port three columns on skills + favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title></title>
+    <title>Adam Keyes | Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="./resources/images/favicon-32x32.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
